# Photo_Selector

./: .gitignore  README.md  pyproject.toml  run_app.py
src/picture_reviewer/: __init__.py  __main__.py
src/picture_reviewer/core/: image_loader.py  indexer.py  motion_photo.py  tags.py
src/picture_reviewer/ui/: image_view.py  main_window.py  motion_select_dialog.py
