[project]
name = "picture_reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "notebook>=7.5.2",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.1",
    "pytest>=9.0.2",
]

[tool.uv]
package = true
